updated A. affinis & A. caerulea and readme

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "url": "https://github.com/primavera133/dragonsGraphQLAPI.git"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "update-snaps": "jest --updateSnapshot"
   },
   "keywords": [
     "Dragonflies",
