--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "url": "https://github.com/primavera133/dragonsGraphQLAPI.git"
   },
   "scripts": {
-    "test": "jest",
+    "test": "jest --forceExit --detectOpenHandles ",
     "update-snaps": "jest --updateSnapshot"
   },
   "keywords": [
