--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "graphql": "^14.5.8",
+    "lockfile-lint": "^3.0.4",
     "micro-cors": "^0.1.1",
     "rimraf": "^3.0.0"
   },
@@ -36,8 +37,10 @@
     "url": "https://github.com/primavera133/dragonsGraphQLAPI.git"
   },
   "scripts": {
-    "test": "jest --forceExit --detectOpenHandles ",
-    "update-snaps": "jest --updateSnapshot"
+    "test": "npm run lockfile-lint && npm run jest",
+    "jest": "jest --forceExit --detectOpenHandles ",
+    "update-snaps": "jest --updateSnapshot",
+    "lockfile-lint": "lockfile-lint --path package-lock.json --type npm --validate-https --allowed-hosts npm"
   },
   "keywords": [
     "Dragonflies",
