--- a/package.json
+++ b/package.json
@@ -3,31 +3,30 @@
   "version": "1.0.1",
   "description": "A GraphQL API",
   "main": "index.js",
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "overrides": {
+    "graphql": "^16.8.1"
+  },
   "dependencies": {
-    "apollo-datasource": "^0.6.3",
-    "apollo-server-micro": "^2.14.2",
+    "@apollo/server": "^4.10.0",
+    "@as-integrations/next": "^3.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.1.0",
-    "graphql": "^14.5.8",
-    "lockfile-lint": "^3.0.4",
-    "micro-cors": "^0.1.1",
-    "rimraf": "^3.0.0"
+    "dotenv": "^16.3.1",
+    "graphql": "^16.8.1",
+    "lockfile-lint": "^4.12.1",
+    "rimraf": "^5.0.5"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^2.6.2",
-    "@graphql-codegen/typescript": "^2.5.1",
-    "apollo-link": "^1.2.13",
-    "apollo-link-http": "^1.5.16",
-    "apollo-server-testing": "^2.9.7",
-    "graphql-codegen": "^0.4.0",
-    "graphql-tag": "^2.10.1",
-    "husky": "^3.0.9",
-    "jest": "^27.2.0",
-    "micro": "^9.3.4",
-    "nock": "^11.6.0",
-    "node-fetch": "^2.6.7",
-    "prettier": "^1.18.2",
-    "test-listen": "^1.1.0"
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "graphql-tag": "^2.12.6",
+    "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "nock": "^13.3.8",
+    "node-fetch": "^2.7.0",
+    "prettier": "^3.1.0"
   },
   "husky": {
     "hooks": {
@@ -39,6 +38,8 @@
     "url": "https://github.com/primavera133/dragonsGraphQLAPI.git"
   },
   "scripts": {
+    "dev": "node api/dev-server.js",
+    "build": "echo 'Build complete'",
     "test": "npm run lockfile-lint && npm run jest",
     "jest": "jest --forceExit --detectOpenHandles ",
     "update-snaps": "jest --updateSnapshot",
