--- a/package.json
+++ b/package.json
@@ -7,7 +7,20 @@
     "node": ">=18.0.0"
   },
   "overrides": {
-    "graphql": "^16.8.1"
+    "graphql": "^16.8.1",
+    "got": "^11.8.5",
+    "undici": "^5.8.0",
+    "minimatch": "^3.0.5",
+    "jsonwebtoken": "^9.0.0",
+    "json5": "^2.2.2",
+    "tough-cookie": "^4.1.3",
+    "apollo-server-core": "^2.26.1",
+    "debug": "^4.3.1",
+    "@babel/traverse": "^7.23.2",
+    "braces": "^3.0.3",
+    "ws": "^5.2.4",
+    "dset": "^3.1.4",
+    "lockfile-lint-api": "^5.9.2"
   },
   "dependencies": {
     "@apollo/server": "^4.10.0",
@@ -15,7 +28,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "graphql": "^16.8.1",
-    "lockfile-lint": "^4.12.1",
+    "lockfile-lint": "^4.13.2",
     "rimraf": "^5.0.5"
   },
   "devDependencies": {
