--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
 # Environment Variables for Dragons GraphQL API
 
-# Optional: Space-separated list of valid API tokens for authentication
-# If not set, the API will be publicly accessible
-# API_USERS="token1 token2 token3"
+# REQUIRED: API Keys for strict authentication
+# The API will be completely inaccessible without a valid API key
+# Generate secure keys using: openssl rand -hex 32
+VALID_API_KEYS=your-secure-api-key-1,your-secure-api-key-2
+
+# Environment
+NODE_ENV=development
 
 # Optional: Apollo Studio API key for monitoring
 # ENGINE_API_KEY=your_apollo_studio_api_key
